<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="image_ids">
        <item>@drawable/newsing</item>
        <item>@drawable/score</item>
        <item>@drawable/chating</item>
        <item>@drawable/faqs</item>
        <item>@drawable/game</item>
        <item>@drawable/sub</item>
    </string-array>

    <!-- General -->


    <!-- Toolbar titles -->
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Other Activity</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">Sotti</string>
    <string name="tools_text_account_information_email">sotti@sottocorp.com</string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>
    <string-array name="image_names">
        <item>News</item>
        <item>Live Score</item>
        <item>Sport Chat</item>
        <item>FAQS</item>
        <item>Game</item>
        <item>Subscribe</item>
    </string-array>
    <string name="app_name">Sport News App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="img_no">No Favorite Found</string>
    <string name="desc">desc</string>
    <string name="menu_share">Share</string>
    <string name="menu_next">Next</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_back">Back</string>
    <string name="menu_favorite">My Favorite</string>
    <string name="menu_about">About</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="search_hint">Hint</string>
    <string name="refresh">Refresh</string>
    <string name="menu_search">Search</string>
    
     <!-- About Content -->
     <string name="app_email">example@mail.com</string>
     <string name="app_website">http://dimasword.com</string>
     <string name="app_description">Your App Description Here. \nLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit. </string>
    
    <string name="startapp_app_id">207007053</string>
    <string name="startapp_dev_id">107151681</string>
    
    <string name="admob_publisher_id">ca-app-pub-8356404931736973/2001120391</string> <!-- Change AdMob Id -->
	<string name="admob_interstitial_id">ca-app-pub-676736546356356/5643544534</string>
	
	<!-- push notification -->
    <string name="parse_application_id">dLgWa68vIY8rLPXC28EJNBP0L2mWtLlBKv0tsTtO</string>
    <string name="parse_client_key">VaprOvExGGNNxNGWinSwB44AEotcCVyVqtza95YC</string>
    
    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/search?q=solodroid+application</string>

    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Lates News</item>
        <item >All News</item>
        <item >Favorite</item>
        <item >About</item>
        <item >Exit</item>
    </string-array>
    
    <!-- List Item Icons(Images) with strings(text of company name) -->
    <!-- Keep them with titles array accordingly -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_description_grey600_24dp</item>
        <item>@drawable/ic_my_library_books_grey600_24dp</item>
        <item>@drawable/ic_favorite_grey600_24dp</item>
        <item>@drawable/ic_info_grey600_24dp</item>
        <item>@drawable/ic_cancel_grey600_24dp</item>
    </array>



	<!-- drawer_list_item Imageview Description  -->
    <string name="description_list_icon">Item Icon</string>
    <string name="title_activity_news">NewsActivity</string>


    <string name="title_section1">ELP</string>
    <string name="title_section2">Boxing</string>
    <string name="title_section3">Car Race</string>
    <string name="title_section4">Horse Race</string>
    <string name="title_section5">Laliga</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="title_activity_chat">Chat Room</string>
    <string name="title_activity_wall">WallActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="title_activity_activiti">Activiti</string>
    <string name="title_activity_main_activiy">MainActiviy</string>
    <string name="title_activity_live_score">Live Score</string>
    <string name="title_activity_blan">Blan</string>
    <string name="title_activity_faqs">FAQS</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_notification_view">Sport ChatNotification</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_login">Screen Name</string>
    
</resources>